fixed contact form spacing

--- a/public/pages/contact/css/style.css
+++ b/public/pages/contact/css/style.css
@@ -99,18 +99,18 @@ body {
 }
 
 .mastfoot {
-    position: relative;
+    position: absolute;
     bottom: 0 !important;
     width: 100%;
     color: rgba(255, 255, 255, .8) !important;
     background-color: rgba(28, 28, 28, .8);
     text-align: center;
-    margin-bottom: -16px;
+    /* margin-bottom: -15px; */
 }
 
 .footer-link {
     margin-top: 10px;
-    padding: 15px;
+    /* padding: 15px; */
 }
 
 .insta-border {
